# lpnu

s6/cn/example/2var/: КМ_КІ303_лаб1.docx  КМ_КІ303_лаб2.docx  КМ_КІ303_лаб4.docx  КМ_КІ303_лаб5.docx  КМ_КІ303_лаб7.docx  КМ_лаб1.pkt  КМ_лаб2.pkt  КМ_лаб3.pkt  КМ_лаб4.pkt  КМ_лаб5.pkt  КМ_лаб8.pkz
s6/cn/example/5var/: lab1_v5.pkt  lab2_v5.pkt  lab6_v5.pkt  КМ_лаб2.docx  КМ_лаб3.docx
s6/cn/lab1/: Порубайміх, Лабораторна 1.odt
s6/cn/lab2/: lab2.pkt  Порубайміх, Лабораторна 2.odt
s6/cn/lab5/: Порубайміх, Лабораторна 5.odt
s6/cn/lab6/: lab6.pkt
s6/cn/lab7/: lab7.pkt
s6/padc/lab1/src/PRO_Lab1/: PRO_Lab1.vcxproj  main.c
s6/padc/lab2/: .~lock.Порубайміх, Л1.odt#
s6/padc/lab2/padc-lab2-src/: CMakeLists.txt
s6/padc/lab2/padc-lab2-src-old/: CMakeLists.txt  main.cpp
s6/padc/lab2/padc-lab2-src-old/jobs_tree/: job_tree.cpp  job_tree.h
s6/padc/lab2/padc-lab2-src-old/matrix/: matrix.cpp  matrix.hpp
s6/padc/lab2/padc-lab2-src-old/ranks/: mpi_rank_base.hpp
s6/padc/lab2/padc-lab2-src-old/ui/: main_window.cpp  matrix_input_window.h
s6/padc/lab2/padc-lab2-src/ctx/: CMakeLists.txt
s6/padc/lab2/padc-lab2-src/ctx/src/: ctx.cpp
s6/padc/lab2/padc-lab2-src/matrix/: CMakeLists.txt
s6/padc/lab2/padc-lab2-src/solver/: CMakeLists.txt
s6/padc/lab2/padc-lab2-src/solver/include/solver/: solver.hpp
s6/padc/lab2/padc-lab2-src/solver/src/: solver.cpp
s6/padc/lab2/padc-lab2-src/test/: CMakeLists.txt
s6/padc/lab3/: Порубайміх, Л3.odt
s6/padc/lab3/padc - lab3 - ex/padc - lab3 - ex/: padc - lab3 - ex.vcxproj
s6/padc/lab3/padc - lab3 - src/: CMakeLists.txt
s6/padc/lab4/: Порубайміх, Л4.odt
s6/padc/lab4/example/lab1/: lab1pro.sln
s6/padc/lab4/src/: CMakeLists.txt
s6/padc/lab4/src/mt/: CMakeLists.txt  main1.cpp
s6/padc/lab4/src/st/: CMakeLists.txt
s6/polics/: Соціальний фактор в захисті комп'ютерних систем.docx
s6/polics/examples/ПРОГИ ЗІКС/IPCS lab1/: IPCS lab1.sln
s6/polics/examples/ПРОГИ ЗІКС/IPCS lab2/: IPCS lab2.sln
s6/polics/examples/ПРОГИ ЗІКС/IPCS lab3/: IPCS lab3.sln
s6/polics/examples/ПРОГИ ЗІКС/IPCS lab6-7/: IPCS lab6-7.sln
s6/polics/examples/ПРОГИ ЗІКС/IPCS lab8/: IPCS lab8.sln
s6/polics/labs/lab1/polics-lab1-src/: CaesarCipherWindow.h
s6/polics/labs/lab2/polics-lab2-src/: PermutationCipher.cpp  main.cpp
s6/polics/labs/lab3/polics-lab3-src/: CMakeLists.txt
s6/polics/labs/lab4/polics-lab4-src/: CMakeLists.txt
s6/polics/labs/lab5/py-test/: main.py
s6/polics/labs/lab6/lab6_py/: ui.py
s6/polics/labs/lab6/polics_lab6_src/: CMakeLists.txt  main.cpp
s6/ss/labs/: .gitignore
s6/ss/labs/lab2/: CMakeLists.txt  main.c
s6/ss/labs/lab3/ss lab3/: ss lab3.sln
s6/tadohast/: Стилі кафедри ЕОМ_20240212_2328.doc
s6/tadohast/labs/lab3/project/: 303_Porubaimikh_3_1.docx
s6/tadohast/labs/lab4/: Untitled 1.odt
s6/tadohast/labs/lab6/: lab6_tdpaz.cpp
s6/tadohast/labs/lab6/Lab6/: Lab6.sln
s7/gim/ex/: index.html  style.css
s8/mps/cw/: .~lock.КІ-403 Порубайміх Олександр, КП 1.docx#  КІ-403 Порубайміх Олександр, КП 1.docx
s8/sipt/lab1/: lab1-function.sci  lab1-script.sce  КІ-403 Порубайміх Л1.odt
s8/sipt/lab2/: lab2.sce  КІ-403 Порубайміх Л2.odt
s8/sipt/lab2/helper/: helper.js
s8/sipt/lab3/: lab3.sce  КІ-403 Порубайміх Л3.odt
s8/sipt/lab4/: lab4.sce  lab4.sce~  КІ-403 Порубайміх Л4.odt
s8/sipt/lab5/: lab5.sce  КІ-403 Порубайміх Л5.odt
s8/sipt/sandbox/: castle1.sci  castle2.sci
s8/wp/: prompt
s8/wp/labs/1/: КІ-403 Порубайміх Л1.odt
s8/wp/labs/1/src/: lab1_1.html  lab1_2.html  lab1_3.html  lab1_4.html
s8/wp/labs/2/: КІ-403 Порубайміх Л2.odt
s8/wp/labs/2/src/: lab2_1.html  lab2_2.html  lab2_3.html  lab2_4.html  lab2_5.html  lab2_6.html
s8/wp/labs/3/: КІ-403 Порубайміх Л3.odt
s8/wp/labs/3/src/: lab3_1.html  lab3_3.html  lab3_4.html  lab3_5.html  lab3_6.html  lab3_7.html  lab3_8.html
s8/wp/labs/4/: КІ-403 Порубайміх Л4.odt
s8/wp/labs/4/src/: lab4_1.html  lab4_2.html  lab4_3.html  (+1 more)
s8/wp/labs/5/: КІ-403 Порубайміх Л5.odt
s8/wp/labs/6/: КІ-403 Порубайміх Л6.odt
sem 6/cn/example/2var/: КМ_КІ303_лаб3.docx  КМ_КІ303_лаб6.docx  КМ_КІ303_лаб8.docx  КМ_лаб6.pkt  КМ_лаб6_ver2.pkt  КМ_лаб7.pkt
sem 6/cn/example/5var/: lab3_v5.pkt  lab4_v5.pkt  lab5_v5.pkt  КМ_лаб1.docx  КМ_лаб4.docx  КМ_лаб5.docx  КМ_лаб6.docx
sem 6/cn/lab1/: MPI - app structure.drawio  lab1.pkt
sem 6/cn/lab3/: lab3.pkt  Порубайміх, Лабораторна 3.odt
sem 6/cn/lab4/: Lab4.pkt  Порубайміх, Лабораторна 4.odt
sem 6/cn/lab5/: lab5.pkt
sem 6/cn/lab6/: lab6_var17.docx  Порубайміх, Лабораторна 6.odt  Порубайміх, Лабораторна 6_.docx
sem 6/cn/lab7/: lab7_var17.docx  Порубайміх, Лабораторна 7.odt
sem 6/cn/lab8/: lab8.pkt  lab8_var17.docx  Порубайміх, Лабораторна 8.odt
sem 6/padc/: .gitignore
sem 6/padc/lab1/: MPI - app structure.drawio
sem 6/padc/lab1/src/: PRO_Lab1.sln
sem 6/padc/lab1/src/PRO_Lab1/: CMakeLists.txt  hf18
sem 6/padc/lab2/: Порубайміх, Л2.odt
sem 6/padc/lab2/padc-lab2-src/mt_main/: CMakeLists.txt
sem 6/padc/lab2/padc-lab2-src/mt_main/src/: mpi_app.cpp
sem 6/padc/lab2/padc-lab2-src/ui/: CMakeLists.txt
sem 6/padc/lab2/padc-lab2-src/ui/include/ui/: app.hpp  main_window.hpp  matrix_output_window.hpp
sem 6/padc/lab2/padc-lab2-src/ui/src/: app.cpp
sem 6/padc/lab3/: graph.odg
sem 6/padc/lab3/padc - lab3 - src/: main.cpp
sem 6/padc/lab4/example/: PRO_Biletskyi_lab4.docx  ╨ƒ╨╛╤ü╨╗╤û╨┤╨╛╨▓╨╜╤û╤ü╤é╤î_╨╛╨▒╤ç╨╕╤ü╨╗╨╡╨╜╨╜╤Å_╨╝╨░╤é╤Ç╨╕╤å╤î.vsdx
sem 6/polics/: Соціальний фактор в захисті комп'ютерних систем.docx
sem 6/polics/labs/: .gitignore
sem 6/polics/labs/lab1/polics-lab1-src/: CMakeLists.txt  CaesarCipherWindow.cpp  main.cpp
sem 6/polics/labs/lab2/polics-lab2-src/: CMakeLists.txt  PremutationCipher.h
sem 6/polics/labs/lab5/polics-lab5-src/: CMakeLists.txt  FeistelCipher.cpp  FeistelCipher.hpp  main.cpp
sem 6/tadohast/labs/lab1/: 303_Porubaimikh_1.docx  303_Porubaimikh_25.odt
sem 6/tadohast/labs/lab4/: 303_Porubaimikh_4.docx
sem 6/tadohast/labs/lab5/: 303_Porubaimikh_5.docx  images.odt
sem 6/tadohast/labs/lab6/: 303_Porubaimikh_6.docx  Untitled 1.odt
sem 7/eh/: .~lock.D-Link.odt#  D-Link.odt
(+766 files in other folders)
